tests/fixtures/invalid/pow_none_bytes_none.py
# Cannot call pow() with None, Bytes, None
x = pow(None, b"hello", None)
